--- a/floating/build.gradle
+++ b/floating/build.gradle
@@ -1,8 +1,6 @@
 plugins {
-    id 'com.android.application'
+    id 'com.android.library'
     id 'kotlin-android'
-    id 'kotlin-kapt'
-    id 'dagger.hilt.android.plugin'
 }
 
 android {
@@ -17,70 +15,34 @@ android {
     compileSdkVersion cfgs.compileSdkVersion
 
     defaultConfig {
-        applicationId "com.zj.play"
         minSdkVersion cfgs.minSdkVersion
-        targetSdkVersion cfgs.targetSdkVersion
-        versionCode cfgs.versionCode
-        versionName cfgs.versionName
+        targetSdkVersion cfgs.compileSdkVersion
 
-        testInstrumentationRunner cfgs.testInstrumentationRunner
-        resConfigs "zh-rCN", "zh-rHK", "zh-rMO", "zh-rTW" // 去除无用语言
-        signingConfig signingConfigs.play
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        consumerProguardFiles "consumer-rules.pro"
     }
 
     buildTypes {
         release {
             minifyEnabled true // 混淆
-            shrinkResources true // 去除无用资源 与lint不同
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-
     kotlinOptions {
-        jvmTarget = "1.8"
+        jvmTarget = '1.8'
     }
-
-    buildFeatures {
-        viewBinding true
-    }
-
-    lintOptions {
-        disable "Instantiatable"
-    }
-
 }
 
 dependencies {
-    implementation fileTree(include: '*.jar', dir: 'libs')
     implementation des.kotlinVersion
     implementation des.coreKtx
     implementation des.appcompat
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
-    implementation 'androidx.localbroadcastmanager:localbroadcastmanager:1.0.0'
-    implementation 'com.youth.banner:banner:2.1.0'
-
-    implementation project(path: ':model')
-
-    // 内存泄漏检测
-    //implementation 'com.squareup.leakcanary:leakcanary-android:1.5.4'
-
-    // hilt
-    implementation "com.google.dagger:hilt-android:$hilt_version"
-    kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
-    implementation 'androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03'
-    kapt 'androidx.hilt:hilt-compiler:1.0.0'
-
-    // 异常上报
-    implementation 'com.tencent.bugly:crashreport:4.0.0'
-    implementation project(path: ':floating')
+    implementation 'com.google.android.material:material:1.4.0'
     testImplementation des.junit
     androidTestImplementation des.extJunit
     androidTestImplementation des.espressoCore
-    implementation project(path: ':core')
-    implementation project(path: ':network')
 }
