--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,16 @@
         android:theme="@style/Theme.Rabi"
         tools:targetApi="31">
         <activity
+            android:name=".ui.theme.BooksActivity"
+            android:exported="false"
+            android:label="@string/title_activity_books"
+            android:theme="@style/Theme.Rabi" />
+        <activity
+            android:name=".ui.theme.PoemActivity"
+            android:exported="false"
+            android:label="@string/title_activity_poem"
+            android:theme="@style/Theme.Rabi" />
+        <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
