--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,11 @@
         android:theme="@style/Theme.Rabi"
         tools:targetApi="31">
         <activity
+            android:name=".PoetsActivity"
+            android:exported="false"
+            android:label="@string/title_activity_poets"
+            android:theme="@style/Theme.Rabi" />
+        <activity
             android:name=".BooksActivity"
             android:exported="false"
             android:label="@string/title_activity_books"
